added a sentence after the save button

--- a/index.html
+++ b/index.html
@@ -452,6 +452,10 @@
         <button onclick="saveCSV()">Complete Predictions and Save as CSV to Send</button>
     </div>
 
+    <body>
+        <p>After you entered all of your predictions and finalized them, click on the link below, save a csv file and email it to nima.najmaei@gmail.com</p>
+    </body>
+
     
 
     <script>
