better wording + colored email address

--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@
     </div>
 
     <body>
-        <p>After you entered all of your predictions and finalized them, click on the link below, save a csv file and email it to nima.najmaei@gmail.com</p>
-    </body>
+        <p>After entering and finalizing all of your predictions, click on the provided link to save the CSV file. Once saved, email the file to <span style="color: red;">nima.najmaei@gmail.com</span>.</p>
+    </body>    
 
     
 
