--- a/index.html
+++ b/index.html
@@ -453,8 +453,11 @@
     </div>
 
     <body>
-        <p>After entering and finalizing all of your predictions, click on the provided link to save the CSV file. Once saved, email the file to <span style="color: red;">nima.najmaei@gmail.com</span>.</p>
-    </body>    
+        <p style="font-size: 20px;">
+            After entering and finalizing all of your predictions, click on the provided link to save the CSV file. Once saved, email the file to <span style="color: red;">nima.najmaei@gmail.com</span>.
+        </p>
+    </body>
+    
 
     
 
