--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
     <body>
         <p style="font-size: 20px;">
-            After entering and finalizing all of your predictions, click on the provided link to save the CSV file. Once saved, email the file to <span style="color: red;">nima.najmaei@gmail.com</span>.
+            After entering and finalizing all of your predictions, click on the above button to save the CSV file. Once saved, email the file to <span style="color: red;">nima.najmaei@gmail.com</span>.
         </p>
     </body>
     
