--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             <th>Team 2</th>
             <th>Champion</th>
         </tr>
-        <tr><td>July 14</td><td id="final1"></td><td id="final2"></td><td><select id="champion"><option value="Nima"></option></select></td></tr>
+        <tr><td>July 14</td><td id="final1"></td><td id="final2"></td><td><select id="champion"><option value=""></option></select></td></tr>
     </table>
 
     <hr>
