--- a/side_by_side_players.html
+++ b/side_by_side_players.html
@@ -50,9 +50,9 @@
             <label for="participant1">Select Participant 1:</label>
             <select id="participant1" onchange="loadPredictions(1)">
                 <option value="">Select...</option>
-                <option value="/data/Nima_N.csv">Nima N</option>
-                <option value="/data/Ramin_R.csv">Ramin R</option>
-                <option value="/data/Shahriar_N.csv">Shahriar N</option>
+                <option value="./data/Nima_N.csv">Nima N</option>
+                <option value="./data/Ramin_R.csv">Ramin R</option>
+                <option value="./data/Shahriar_N.csv">Shahriar N</option>
             </select>
             <div id="predictions1"></div>
         </div>
@@ -60,9 +60,9 @@
             <label for="participant2">Select Participant 2:</label>
             <select id="participant2" onchange="loadPredictions(2)">
                 <option value="">Select...</option>
-                <option value="/data/Nima_N.csv">Nima N</option>
-                <option value="/data/Ramin_R.csv">Ramin R</option>
-                <option value="/data/Shahriar_N.csv">Shahriar N</option>
+                <option value="./data/Nima_N.csv">Nima N</option>
+                <option value="./data/Ramin_R.csv">Ramin R</option>
+                <option value="./data/Shahriar_N.csv">Shahriar N</option>
             </select>
             <div id="predictions2"></div>
         </div>
@@ -70,9 +70,9 @@
             <label for="participant3">Select Participant 3:</label>
             <select id="participant3" onchange="loadPredictions(3)">
                 <option value="">Select...</option>
-                <option value="/data/Nima_N.csv">Nima N</option>
-                <option value="/data/Ramin_R.csv">Ramin R</option>
-                <option value="/data/Shahriar_N.csv">Shahriar N</option>
+                <option value="./data/Nima_N.csv">Nima N</option>
+                <option value="./data/Ramin_R.csv">Ramin R</option>
+                <option value="./data/Shahriar_N.csv">Shahriar N</option>
             </select>
             <div id="predictions3"></div>
         </div>
