--- a/side_by_side_players.html
+++ b/side_by_side_players.html
@@ -41,9 +41,17 @@
         .participant-container {
             width: 30%;
         }
+        .logo-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
+    <div class="logo-container">
+        <img src="https://seeklogo.com/images/U/uefa-euro-2024-logo-124EEA67D8-seeklogo.com.png" alt="Euro 2024 Logo" style="width:200px;">
+    </div>
     <h1>Compare Predictions</h1>
     <div class="comparison-container">
         <div class="participant-container">
