--- a/side_by_side_players.html
+++ b/side_by_side_players.html
@@ -61,9 +61,6 @@
             <label for="participant1">Select Participant 1:</label>
             <select id="participant1" onchange="loadPredictions(1)">
                 <option value="">Select...</option>
-                <option value="./data/Nima_N.csv">Nima N</option>
-                <option value="./data/Ramin_R.csv">Ramin R</option>
-                <option value="./data/Shahriar_N.csv">Shahriar N</option>
             </select>
             <div id="predictions1"></div>
         </div>
@@ -71,9 +68,6 @@
             <label for="participant2">Select Participant 2:</label>
             <select id="participant2" onchange="loadPredictions(2)">
                 <option value="">Select...</option>
-                <option value="./data/Nima_N.csv">Nima N</option>
-                <option value="./data/Ramin_R.csv">Ramin R</option>
-                <option value="./data/Shahriar_N.csv">Shahriar N</option>
             </select>
             <div id="predictions2"></div>
         </div>
@@ -81,15 +75,14 @@
             <label for="participant3">Select Participant 3:</label>
             <select id="participant3" onchange="loadPredictions(3)">
                 <option value="">Select...</option>
-                <option value="./data/Nima_N.csv">Nima N</option>
-                <option value="./data/Ramin_R.csv">Ramin R</option>
-                <option value="./data/Shahriar_N.csv">Shahriar N</option>
             </select>
             <div id="predictions3"></div>
         </div>
     </div>
 
     <script>
+        const files = ['./data/Nima_N.csv', './data/Ramin_R.csv', './data/Shahriar_N.csv'];
+
         const flags = {
             'Germany': 'https://flagcdn.com/w20/de.png',
             'Scotland': 'https://flagcdn.com/w20/gb-sct.png',
@@ -116,6 +109,30 @@
             'Portugal': 'https://flagcdn.com/w20/pt.png',
             'Czechia': 'https://flagcdn.com/w20/cz.png'
         };
+
+        function populateDropdowns() {
+            const dropdowns = [document.getElementById('participant1'), document.getElementById('participant2'), document.getElementById('participant3')];
+            files.forEach(file => {
+                fetch(file)
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! status: ${response.status}`);
+                        }
+                        return response.text();
+                    })
+                    .then(data => {
+                        const rows = data.split('\n');
+                        const participantName = rows[0].split(',')[0]; // Assuming the participant name is in the first cell of the first row
+                        dropdowns.forEach(dropdown => {
+                            const option = document.createElement('option');
+                            option.value = file;
+                            option.text = participantName;
+                            dropdown.add(option);
+                        });
+                    })
+                    .catch(error => console.error('Error loading participant names:', error));
+            });
+        }
 
         function loadPredictions(participantNumber) {
             const participantSelect = document.getElementById(`participant${participantNumber}`);
@@ -159,6 +176,9 @@
                 predictionsDiv.innerHTML = '';
             }
         }
+
+        // Populate dropdowns on page load
+        window.onload = populateDropdowns;
     </script>
 </body>
 </html>
