--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compare with Euro 2024 Results</title>
+    <title>Compare Predictions</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
