added page to compare with actual results

--- a/participant_comparison.html
+++ b/participant_comparison.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compare Predictions</title>
+    <title>Compare Participants Predictions</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -55,7 +55,7 @@
     <div class="logo-container">
         <img src="https://seeklogo.com/images/U/uefa-euro-2024-logo-124EEA67D8-seeklogo.com.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
-    <h1>Compare Predictions</h1>
+    <h1>Compare Participants Predictions</h1>
     <div class="comparison-container">
         <div class="participant-container">
             <label for="participant1">Select Participant 1:</label>
