--- a/download_pdf.html
+++ b/download_pdf.html
@@ -85,7 +85,7 @@
                 });
             }
 
-            pdf.save('participants_results.pdf');
+            pdf.save('full_predictions.pdf');
         }
     </script>
 </body>
